# thermal-printer

./: .gitignore  README.md
DriverChip/: .gitignore  CMakeLists.txt
DriverChip/lib/thermal_printer/: motor_driver.cpp  motor_driver.h  printer_driver.cpp  printer_driver.h
DriverChip/src/: main.cpp
Firmware/DriverChip/: CMakeLists.txt  platformio.ini
Firmware/DriverChip/lib/thermal_printer/: motor_driver.h
Firmware/DriverChip/src/: main.cpp
Firmware/WiFiChip/: CMakeLists.txt  platformio.ini
Firmware/driver-chip/lib/thermal-printer/: printer-driver.cpp  printer-driver.h
Firmware/wifi-chip/: .gitignore  platformio.ini
Software/TestClient/: index.html  index.js
Software/printer-daemon/: Cargo.toml
Software/printer-daemon/src/: config.rs  driver.rs  logging.rs  main.rs
TestClient/: index.js
WebClient/: .editorconfig  angular.json  package-lock.json  package.json
WebClient/src/: index.html  styles.scss
WebClient/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  web-socket-client.service.spec.ts  web-socket-client.service.ts
WiFiChip/: CMakeLists.txt
WiFiChip/src/: main.cpp
firmware-temp/driver-chip/src/: main.cpp
firmware/driver-chip/: platformio.ini
firmware/wifi-chip/src/: main.cpp
software-temp/printer-daemon/: .gitignore
software-temp/test-client/: index.html  index.js
software/printer-daemon/: Cargo.toml
software/printer-daemon/src/: config.rs  logging.rs  main.rs  os_detection.rs  server.rs
software/printer-daemon/src/services/: logging.rs  mod.rs  os_detection.rs  runtime_data.rs
(+11 files in other folders)
